Revision history for File-Slurper

{{$NEXT}}
          Work around PerlIO encoding bug

0.003     2015-02-05 20:42:26+01:00 Europe/Amsterdam
          Implement writer functions
          Default to crlf=off, add auto option for old behavior
          Make PerlIO::utf8_strict an optional dependency

0.002     2014-10-21 19:03:44+02:00 Europe/Amsterdam
          rename File::Slurp::Sane to File::Slurper
          Accept UTF-8 as encoding case-insensitively
          Fix performance issue on 5.20.0

0.001     2014-05-24 18:16:48CEST+0200 Europe/Amsterdam
          Initial release to an unsuspecting world