@@ -2,6 +2,7 @@ Revision history for File-Slurper
 
 {{$NEXT}}
           Work around PerlIO encoding bug
+          Add Rationale and Dependency sections to documentation
 
 0.003     2015-02-05 20:42:26+01:00 Europe/Amsterdam
           Implement writer functions
